[package]
name = "blast_emst_core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
android_log = "0.1.3"
log = "0.4.21"